default/synapse/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: synapse
  namespace: default
spec:
  selector:
    app: synapse
  ports:
  - name: synapse
    port: 8008
