default/synapse/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: synapse
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-global-auth: "false"
spec:
  tls:
  - hosts:
    - matrix.desertbluffs.com
  rules:
  - host: matrix.desertbluffs.com
    http:
      paths:
      - backend:
          serviceName: synapse
          servicePort: synapse
