default/synapse/networkpolicy.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: synapse
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: synapse
  ingress:
  - ports:
    - port: 8008
    from:
    - namespaceSelector:
        matchLabels:
          name: ingress-nginx
